Small improvements and bug fixes

--- a/src/main/resources/templates/fragments/contactformfragments.html
+++ b/src/main/resources/templates/fragments/contactformfragments.html
@@ -57,10 +57,10 @@
                                     </div>
                                     <div class="form-row">
                                         <div class="col-md-4 mb-3">
-                                            <input type="text" class="form-control" id="contactPhone" name="contactPhone" placeholder="Contact phone" required>
+                                            <input type="tel" class="form-control" id="contactPhone" name="contactPhone" placeholder="Contact phone">
                                         </div>
                                         <div class="col-md-4 mb-3 ml-auto">
-                                        <input type="email" class="form-control" id="contactEmail" name="contactEmail" placeholder="Contact Email" required>
+                                        <input type="email" class="form-control" id="contactEmail" name="contactEmail" placeholder="Contact Email">
                                     </div>
                                 </div>
                                 <div class="form-row">
@@ -140,10 +140,10 @@
                                     </div>
                                     <div class="form-row">
                                         <div class="col-md-4 mb-3">
-                                            <input type="text" class="form-control" id="contactPhone" name="contactPhone" placeholder="Contact phone" required>
+                                            <input type="tel" class="form-control" id="contactPhone" name="contactPhone" placeholder="Contact phone">
                                         </div>
                                         <div class="col-md-4 mb-3 ml-auto">
-                                            <input type="email" class="form-control" id="contactEmail" name="contactEmail" placeholder="Contact Email" required>
+                                            <input type="email" class="form-control" id="contactEmail" name="contactEmail" placeholder="Contact Email">
                                         </div>
                                     </div>
                                     <div class="form-row">
