--- a/src/main/resources/templates/fragments/departmentformfragments.html
+++ b/src/main/resources/templates/fragments/departmentformfragments.html
@@ -30,7 +30,7 @@
                                             <input type="text" class="form-control" id="departmentName" name="departmentName" placeholder="Department name" required>
                                         </div>
                                         <div class="col-md-2 mb-3 ml-auto">
-                                            <select class="custom-select" name="closed" id="closed" required>
+                                            <select class="custom-select" name="closed" id="closed" >
                                                 <option selected disabled value="">Is Closed...</option>
                                                 <option value="true">Closed</option>
                                                 <option value="false">Active</option>
@@ -73,7 +73,7 @@
                                             <input type="text" class="form-control" id="departmentName" name="departmentName" placeholder="Department name" required>
                                         </div>
                                         <div class="col-md-2 mb-3 ml-auto">
-                                            <select class="custom-select" name="closed" id="closed" required>
+                                            <select class="custom-select" name="closed" id="closed" >
                                                 <option selected disabled value="">Is Closed...</option>
                                                 <option value="true">Closed</option>
                                                 <option value="false">Active</option>
