--- a/src/main/resources/templates/fragments/projectformfragments.html
+++ b/src/main/resources/templates/fragments/projectformfragments.html
@@ -38,13 +38,13 @@
                                             </select>
                                         </div>
                                         <div class="col-md-4 mb-3">
-                                            <select class="custom-select" id="projectType" name="projectType" required disabled>
+                                            <select class="custom-select" id="projectType" name="projectType" disabled>
                                                 <option selected disabled value="">Choose Project Type...</option>
 
                                             </select>
                                         </div>
                                         <div class="col-md-4 mb-3">
-                                            <select class="custom-select" id="projectStatus" name="projectStatus" required disabled>
+                                            <select class="custom-select" id="projectStatus" name="projectStatus" disabled>
                                                 <option selected disabled value="">Choose Project Status...</option>
 
                                             </select>
@@ -52,13 +52,13 @@
                                     </div>
                                     <div class="form-row">
                                         <div class="col-md-9 mb-3">
-                                            <select class="custom-select" id="customer" name="customer" required disabled>
+                                            <select class="custom-select" id="customer" name="customer" disabled>
                                                 <option selected disabled value="">Choose Customer...</option>
 
                                             </select>
                                         </div>
                                         <div class="col-md-3 mb-3 ml-auto">
-                                            <select class="custom-select" name="closed" id="closed" required>
+                                            <select class="custom-select" name="closed" id="closed" >
                                                 <option selected disabled value="">Is Closed...</option>
                                                 <option value="true">Closed</option>
                                                 <option value="false">Active</option>
@@ -123,19 +123,19 @@
                                     </div>
                                     <div class="form-row">
                                         <div class="col-md-4 mb-3">
-                                            <select class="custom-select" id="employees" name="employees" required disabled>
+                                            <select class="custom-select" id="employees" name="employees" disabled>
                                                 <option selected disabled value="">Choose Manager...</option>
 
                                             </select>
                                         </div>
                                         <div class="col-md-4 mb-3">
-                                            <select class="custom-select" id="projectType" name="projectType" required disabled>
+                                            <select class="custom-select" id="projectType" name="projectType" disabled>
                                                 <option selected disabled value="">Choose Project Type...</option>
 
                                             </select>
                                         </div>
                                         <div class="col-md-4 mb-3">
-                                            <select class="custom-select" id="projectStatus" name="projectStatus" required disabled>
+                                            <select class="custom-select" id="projectStatus" name="projectStatus" disabled>
                                                 <option selected disabled value="">Choose Project Status...</option>
 
                                             </select>
@@ -143,13 +143,13 @@
                                     </div>
                                     <div class="form-row">
                                         <div class="col-md-9 mb-3">
-                                            <select class="custom-select" id="customer" name="customer" required disabled>
+                                            <select class="custom-select" id="customer" name="customer" disabled>
                                                 <option selected disabled value="">Choose Customer...</option>
 
                                             </select>
                                         </div>
                                         <div class="col-md-3 mb-3 ml-auto">
-                                            <select class="custom-select" name="closed" id="closed" required>
+                                            <select class="custom-select" name="closed" id="closed">
                                             <option selected disabled value="">Is Closed...</option>
                                             <option value="true">Closed</option>
                                             <option value="false">Active</option>
