--- a/src/main/resources/templates/fragments/userformfragments.html
+++ b/src/main/resources/templates/fragments/userformfragments.html
@@ -29,7 +29,10 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="password">Password</label>
-                                    <input type="password" class="form-control" id="password" name="password" value="" placeholder="Password" />
+                                    <input type="password" minlength="8" class="form-control" id="password" name="password" value="" placeholder="Password" required/>
+                                    <small id="passwordHelpBlock" class="form-text text-muted">
+                                        Your password must be at least 8 characters long.
+                                    </small>
                                 </div>
                                 <div class="form-group">
                                     <label for="role">Role</label>
@@ -43,13 +46,13 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="employee">Employee</label>
-                                    <select class="custom-select" id="employee" name="employee" required disabled>
+                                    <select class="custom-select" id="employee" name="employee" disabled>
                                         <option selected disabled value="">Assigned to...</option>
 
                                     </select>
                                 <div class="form-group">
                                     <label for="enabled">Active / Inactive</label>
-                                    <select class="custom-select" id="enabled" name="enabled" required >
+                                    <select class="custom-select" id="enabled" name="enabled" >
                                         <option value="true">Active</option>
                                         <option value="false">Inactive</option>
                                     </select>
@@ -88,7 +91,10 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="password">Password</label>
-                                    <input type="password" class="form-control" id="password" name="password" value="" placeholder="Password" required />
+                                    <input type="password" minlength="8" class="form-control" id="password" name="password" value="" placeholder="Password" required />
+                                    <small id="passwordHelpBlock" class="form-text text-muted">
+                                        Your password must be at least 8 characters long.
+                                    </small>
                                 </div>
                                 <div class="form-group">
                                     <label for="role">Role</label>
@@ -103,7 +109,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="employee">Employee</label>
-                                    <select class="custom-select" id="employee" name="employee" required disabled>
+                                    <select class="custom-select" id="employee" name="employee" disabled>
                                         <option selected disabled value="">Assigned to...</option>
 
                                     </select>
@@ -111,7 +117,7 @@
 
                                 <div class="form-group">
                                     <label for="enabled">Active / Inactive</label>
-                                    <select class="custom-select" name="enabled" id="enabled" required>
+                                    <select class="custom-select" name="enabled" id="enabled" >
                                         <option selected disabled value="">Choose Activity...</option>
                                         <option value="true">Active</option>
                                         <option value="false">Inactive</option>
