--- a/src/main/resources/templates/fragments/countryformfragments.html
+++ b/src/main/resources/templates/fragments/countryformfragments.html
@@ -27,13 +27,13 @@
                                     </div>
                                     <div class="form-row">
                                         <div class="col-md-2 mb-3">
-                                            <input type="text" class="form-control" id="countryCode" name="countryCode" placeholder="Country Code" required>
+                                            <input type="text" minlength="2" maxlength="2" class="form-control" id="countryCode" name="countryCode" placeholder="Country Code" required>
                                         </div>
                                         <div class="col-md-8 mb-3">
                                             <input type="text" class="form-control" id="countryName" name="countryName" placeholder="Country Name" required>
                                         </div>
                                         <div class="col-md-2 mb-3 ml-auto">
-                                            <select class="custom-select" name="closed" id="closed" required>
+                                            <select class="custom-select" name="closed" id="closed" >
                                                 <option selected disabled value="">Is Closed...</option>
                                                 <option value="true">Closed</option>
                                                 <option value="false">Active</option>
@@ -74,13 +74,13 @@
                                     <h6 style="font-weight: bold">Main Information</h6>
                                     <div class="form-row">
                                         <div class="col-md-2 mb-3">
-                                            <input type="text" class="form-control" id="countryCode" name="countryCode" placeholder="Country Code" required>
+                                            <input type="text" minlength="2" maxlength="2" class="form-control" id="countryCode" name="countryCode" placeholder="Country Code" required>
                                         </div>
                                         <div class="col-md-8 mb-3">
                                             <input type="text" class="form-control" id="countryName" name="countryName" placeholder="Country Name" required>
                                         </div>
                                         <div class="col-md-2 mb-3 ml-auto">
-                                            <select class="custom-select" name="closed" id="closed" required>
+                                            <select class="custom-select" name="closed" id="closed" >
                                                 <option selected disabled value="">Is Closed...</option>
                                                 <option value="true">Closed</option>
                                                 <option value="false">Active</option>
