--- a/src/main/resources/templates/fragments/currencyformfragments.html
+++ b/src/main/resources/templates/fragments/currencyformfragments.html
@@ -27,13 +27,13 @@
                                             <input type="hidden" class="form-control" id="currencyId" name="currencyId" value="" />
                                         </div>
                                         <div class="col-md-2 mb-3">
-                                            <input type="text" class="form-control" id="currencyCode" name="currencyCode" placeholder="Currency Code" required>
+                                            <input type="text" minlength="3" maxlength="3" class="form-control" id="currencyCode" name="currencyCode" placeholder="Currency Code" required>
                                         </div>
                                         <div class="col-md-8 mb-3">
                                             <input type="text" class="form-control" id="currencyName" name="currencyName" placeholder="Currency Name" required>
                                         </div>
                                         <div class="col-md-2 mb-3 ml-auto">
-                                            <select class="custom-select" name="closed" id="closed" required>
+                                            <select class="custom-select" name="closed" id="closed" >
                                                 <option selected disabled value="">Is Closed...</option>
                                                 <option value="true">Closed</option>
                                                 <option value="false">Active</option>
@@ -74,13 +74,13 @@
                                     <h6 style="font-weight: bold">Main Information</h6>
                                     <div class="form-row">
                                         <div class="col-md-2 mb-3">
-                                            <input type="text" class="form-control" id="currencyCode" name="currencyCode" placeholder="Currency Code" required>
+                                            <input type="text" minlength="3" maxlength="3" class="form-control" id="currencyCode" name="currencyCode" placeholder="Currency Code" required>
                                         </div>
                                         <div class="col-md-8 mb-3">
                                             <input type="text" class="form-control" id="currencyName" name="currencyName" placeholder="Currency Name" required>
                                         </div>
                                         <div class="col-md-2 mb-3 ml-auto">
-                                            <select class="custom-select" name="closed" id="closed" required>
+                                            <select class="custom-select" name="closed" id="closed" >
                                                 <option selected disabled value="">Is Closed...</option>
                                                 <option value="true">Closed</option>
                                                 <option value="false">Active</option>
