--- a/src/main/resources/templates/fragments/customerformfragments.html
+++ b/src/main/resources/templates/fragments/customerformfragments.html
@@ -32,13 +32,13 @@
                                     </div>
                                     <div class="form-row">
                                         <div class="col-md-4 mb-3">
-                                            <input type="number" class="form-control" id="customerRegistrationNumber" name="customerRegistrationNumber" placeholder="Registration #" required>
+                                            <input type="text" class="form-control" id="customerRegistrationNumber" name="customerRegistrationNumber" placeholder="Registration #" >
                                         </div>
                                         <div class="col-md-4 mb-3">
-                                            <input type="text" class="form-control" id="customerVATNumber" name="customerVATNumber" placeholder="VAT #" required>
+                                            <input type="text" class="form-control" id="customerVATNumber" name="customerVATNumber" placeholder="VAT #" >
                                         </div>
                                         <div class="col-md-4 mb-3 ml-auto">
-                                            <select class="custom-select" name="closed" id="closed" required>
+                                            <select class="custom-select" name="closed" id="closed" >
                                                 <option selected disabled value="">Is Closed...</option>
                                                 <option value="true">Closed</option>
                                                 <option value="false">Active</option>
@@ -48,7 +48,7 @@
                                     <h6 style="font-weight: bold">Contact Information</h6>
                                     <div class="form-row">
                                         <div class="col-md-6 mb-3">
-                                            <input type="text" class="form-control" id="addressLine1" name="addressLine1" placeholder="Address line 1" required>
+                                            <input type="text" class="form-control" id="addressLine1" name="addressLine1" placeholder="Address line 1" >
                                         </div>
                                         <div class="col-md-6 mb-3">
                                             <input type="text" class="form-control" id="addressLine2" name="addressLine2" placeholder="Address line 2" >
@@ -56,10 +56,10 @@
                                     </div>
                                     <div class="form-row">
                                         <div class="col-md-6 mb-3">
-                                            <input type="text" class="form-control" id="city" name="city" placeholder="City" required>
+                                            <input type="text" class="form-control" id="city" name="city" placeholder="City" >
                                         </div>
                                         <div class="col-md-3 mb-3">
-                                            <input type="text" class="form-control" id="zipCode" name="zipCode" placeholder="Zip" required>
+                                            <input type="text" class="form-control" id="zipCode" name="zipCode" placeholder="Zip" >
                                         </div>
                                         <div class="col-md-3 mb-3">
                                             <select class="custom-select" id="country" name="country" disabled>
@@ -70,24 +70,24 @@
                                     </div>
                                     <div class="form-row">
                                         <div class="col-md-4 mb-3">
-                                            <input type="text" class="form-control" id="contactPhone" name="contactPhone" placeholder="Contact phone" required>
+                                            <input type="tel" class="form-control" id="contactPhone" name="contactPhone" placeholder="Contact phone" >
                                         </div>
                                         <div class="col-md-4 mb-3">
-                                            <input type="email" class="form-control" id="contactEmail" name="contactEmail" placeholder="Contact Email" required>
+                                            <input type="email" class="form-control" id="contactEmail" name="contactEmail" placeholder="Contact Email" >
                                         </div>
                                     </div>
                                     <h6 style="font-weight: bold">Financial Information</h6>
                                     <div class="form-row">
                                         <div class="col-md-6 mb-3">
-                                            <input type="text" class="form-control" id="bankName" name="bankName" placeholder="Bank name" required>
+                                            <input type="text" class="form-control" id="bankName" name="bankName" placeholder="Bank name" >
                                         </div>
                                         <div class="col-md-6 mb-3">
-                                            <input type="text" class="form-control" id="bankAccount" name="bankAccount" placeholder="Account #" required>
+                                            <input type="text" class="form-control" id="bankAccount" name="bankAccount" placeholder="Account #" >
                                         </div>
                                     </div>
                                     <div class="form-row">
                                         <div class="col-md-4 mb-3">
-                                            <input type="text" class="form-control" id="bankCode" name="bankCode" placeholder="Bank code" required>
+                                            <input type="text" class="form-control" id="bankCode" name="bankCode" placeholder="Bank code" >
                                         </div>
                                         <div class="col-md-4 mb-3">
                                             <input type="text" class="form-control" id="swift" name="swift" placeholder="SWIFT" >
@@ -137,10 +137,10 @@
                                     </div>
                                     <div class="form-row">
                                         <div class="col-md-4 mb-3">
-                                            <input type="number" class="form-control" id="customerRegistrationNumber" name="customerRegistrationNumber" placeholder="Registration #" required>
+                                            <input type="text" class="form-control" id="customerRegistrationNumber" name="customerRegistrationNumber" placeholder="Registration #" >
                                         </div>
                                         <div class="col-md-4 mb-3">
-                                            <input type="text" class="form-control" id="customerVATNumber" name="customerVATNumber" placeholder="VAT #" required>
+                                            <input type="text" class="form-control" id="customerVATNumber" name="customerVATNumber" placeholder="VAT #" >
                                         </div>
                                         <div class="col-md-4 mb-3 ml-auto">
                                             <select class="custom-select" name="closed" id="closed" required>
@@ -153,7 +153,7 @@
                                     <h6 style="font-weight: bold">Contact Information</h6>
                                     <div class="form-row">
                                         <div class="col-md-6 mb-3">
-                                            <input type="text" class="form-control" id="addressLine1" name="addressLine1" placeholder="Address line 1" required>
+                                            <input type="text" class="form-control" id="addressLine1" name="addressLine1" placeholder="Address line 1" >
                                         </div>
                                         <div class="col-md-6 mb-3">
                                             <input type="text" class="form-control" id="addressLine2" name="addressLine2" placeholder="Address line 2" >
@@ -161,10 +161,10 @@
                                     </div>
                                     <div class="form-row">
                                         <div class="col-md-6 mb-3">
-                                            <input type="text" class="form-control" id="city" name="city" placeholder="City" required>
+                                            <input type="text" class="form-control" id="city" name="city" placeholder="City" >
                                         </div>
                                         <div class="col-md-3 mb-3">
-                                            <input type="text" class="form-control" id="zipCode" name="zipCode" placeholder="Zip" required>
+                                            <input type="text" class="form-control" id="zipCode" name="zipCode" placeholder="Zip" >
                                         </div>
                                         <div class="col-md-3 mb-3">
                                             <select class="custom-select" id="country" name="country" disabled>
@@ -175,24 +175,24 @@
                                     </div>
                                     <div class="form-row">
                                         <div class="col-md-4 mb-3">
-                                            <input type="text" class="form-control" id="contactPhone" name="contactPhone" placeholder="Contact phone" required>
+                                            <input type="tel" class="form-control" id="contactPhone" name="contactPhone" placeholder="Contact phone" >
                                         </div>
                                         <div class="col-md-4 mb-3">
-                                            <input type="email" class="form-control" id="contactEmail" name="contactEmail" placeholder="Contact Email" required>
+                                            <input type="email" class="form-control" id="contactEmail" name="contactEmail" placeholder="Contact Email" >
                                         </div>
                                     </div>
                                     <h6 style="font-weight: bold">Financial Information</h6>
                                     <div class="form-row">
                                         <div class="col-md-6 mb-3">
-                                            <input type="text" class="form-control" id="bankName" name="bankName" placeholder="Bank name" required>
+                                            <input type="text" class="form-control" id="bankName" name="bankName" placeholder="Bank name" >
                                         </div>
                                         <div class="col-md-6 mb-3">
-                                            <input type="text" class="form-control" id="bankAccount" name="bankAccount" placeholder="Account #" required>
+                                            <input type="text" class="form-control" id="bankAccount" name="bankAccount" placeholder="Account #" >
                                         </div>
                                     </div>
                                     <div class="form-row">
                                         <div class="col-md-4 mb-3">
-                                            <input type="text" class="form-control" id="bankCode" name="bankCode" placeholder="Bank code" required>
+                                            <input type="text" class="form-control" id="bankCode" name="bankCode" placeholder="Bank code" >
                                         </div>
                                         <div class="col-md-4 mb-3">
                                             <input type="text" class="form-control" id="swift" name="swift" placeholder="SWIFT" >
