--- a/src/main/resources/templates/fragments/paytermformfragments.html
+++ b/src/main/resources/templates/fragments/paytermformfragments.html
@@ -23,7 +23,7 @@
                                 <div class="container-fluid">
                                     <h6 style="font-weight: bold">Main Information</h6>
                                     <div class="col-md-12 mb-3">
-                                        <input type="text" class="form-control" id="term" name="term" placeholder="Pay term" required>
+                                        <input type="number" min="0" step="0.01"  class="form-control" id="term" name="term" placeholder="Pay term" required>
                                     </div>
                                     <!--<div class="form-group">
                                         <input type="hidden" class="form-control" id="contactId" name="contactId" value="" />
@@ -61,7 +61,7 @@
                                     <h6 style="font-weight: bold">Main Information</h6>
                                     <div class="form-row">
                                         <div class="col-md-12 mb-3">
-                                            <input type="text" class="form-control" id="term" name="term" placeholder="Pay term" required>
+                                            <input type="number" min="0" step="0.01" class="form-control" id="term" name="term" placeholder="Pay term" required>
                                         </div>
                                     </div>
                                 </div>
