--- a/src/main/resources/templates/fragments/supplierformfragments.html
+++ b/src/main/resources/templates/fragments/supplierformfragments.html
@@ -32,13 +32,13 @@
                                     </div>
                                     <div class="form-row">
                                         <div class="col-md-4 mb-3">
-                                            <input type="text" class="form-control" id="supplierRegistrationNumber" name="supplierRegistrationNumber" placeholder="Registration #" required>
+                                            <input type="text" class="form-control" id="supplierRegistrationNumber" name="supplierRegistrationNumber" placeholder="Registration #" >
                                         </div>
                                         <div class="col-md-4 mb-3">
-                                            <input type="text" class="form-control" id="supplierVATNumber" name="supplierVATNumber" placeholder="VAT #" required>
+                                            <input type="text" class="form-control" id="supplierVATNumber" name="supplierVATNumber" placeholder="VAT #" >
                                         </div>
                                         <div class="col-md-4 mb-3 ml-auto">
-                                            <select class="custom-select" name="closed" id="closed" required>
+                                            <select class="custom-select" name="closed" id="closed" >
                                                 <option selected disabled value="">Is Closed...</option>
                                                 <option value="true">Closed</option>
                                                 <option value="false">Active</option>
@@ -48,7 +48,7 @@
                                     <h6 style="font-weight: bold">Contact Information</h6>
                                     <div class="form-row">
                                         <div class="col-md-6 mb-3">
-                                            <input type="text" class="form-control" id="addressLine1" name="addressLine1" placeholder="Address line 1" required>
+                                            <input type="text" class="form-control" id="addressLine1" name="addressLine1" placeholder="Address line 1" >
                                         </div>
                                         <div class="col-md-6 mb-3">
                                             <input type="text" class="form-control" id="addressLine2" name="addressLine2" placeholder="Address line 2" >
@@ -56,13 +56,13 @@
                                     </div>
                                     <div class="form-row">
                                         <div class="col-md-6 mb-3">
-                                            <input type="text" class="form-control" id="city" name="city" placeholder="City" required>
+                                            <input type="text" class="form-control" id="city" name="city" placeholder="City" >
                                         </div>
                                         <div class="col-md-3 mb-3">
-                                            <input type="text" class="form-control" id="zipCode" name="zipCode" placeholder="Zip" required>
+                                            <input type="text" class="form-control" id="zipCode" name="zipCode" placeholder="Zip" >
                                         </div>
                                         <div class="col-md-3 mb-3">
-                                            <select class="custom-select" id="country" name="country" required disabled>
+                                            <select class="custom-select" id="country" name="country" disabled>
                                                 <option selected disabled value="">Choose Country...</option>
 
                                             </select>
@@ -70,30 +70,30 @@
                                     </div>
                                     <div class="form-row">
                                         <div class="col-md-4 mb-3">
-                                            <input type="text" class="form-control" id="contactPhone" name="contactPhone" placeholder="Contact phone" required>
+                                            <input type="tel" class="form-control" id="contactPhone" name="contactPhone" placeholder="Contact phone" >
                                         </div>
                                         <div class="col-md-4 mb-3">
-                                            <input type="email" class="form-control" id="contactEmail" name="contactEmail" placeholder="Contact Email" required>
+                                            <input type="email" class="form-control" id="contactEmail" name="contactEmail" placeholder="Contact Email" >
                                         </div>
                                     </div>
                                     <h6 style="font-weight: bold">Financial Information</h6>
                                     <div class="form-row">
                                         <div class="col-md-6 mb-3">
-                                            <input type="text" class="form-control" id="bankName" name="bankName" placeholder="Bank name" required>
+                                            <input type="text" class="form-control" id="bankName" name="bankName" placeholder="Bank name" >
                                         </div>
                                         <div class="col-md-6 mb-3">
-                                            <input type="text" class="form-control" id="bankAccount" name="bankAccount" placeholder="Account #" required>
+                                            <input type="text" class="form-control" id="bankAccount" name="bankAccount" placeholder="Account #" >
                                         </div>
                                     </div>
                                     <div class="form-row">
                                         <div class="col-md-4 mb-3">
-                                            <input type="text" class="form-control" id="bankCode" name="bankCode" placeholder="Bank code" required>
+                                            <input type="text" class="form-control" id="bankCode" name="bankCode" placeholder="Bank code" >
                                         </div>
                                         <div class="col-md-4 mb-3">
                                             <input type="text" class="form-control" id="swift" name="swift" placeholder="SWIFT" >
                                         </div>
                                         <div class="col-md-4 mb-3">
-                                            <select class="custom-select" id="currency" name="currency" required disabled>
+                                            <select class="custom-select" id="currency" name="currency" disabled>
                                                 <option selected disabled value="">Choose Currency...</option>
 
                                             </select>
@@ -137,13 +137,13 @@
                                     </div>
                                     <div class="form-row">
                                         <div class="col-md-4 mb-3">
-                                            <input type="text" class="form-control" id="supplierRegistrationNumber" name="supplierRegistrationNumber" placeholder="Registration #" required >
+                                            <input type="text" class="form-control" id="supplierRegistrationNumber" name="supplierRegistrationNumber" placeholder="Registration #"  >
                                         </div>
                                         <div class="col-md-4 mb-3">
-                                            <input type="text" class="form-control" id="supplierVATNumber" name="supplierVATNumber" placeholder="VAT #" required >
+                                            <input type="text" class="form-control" id="supplierVATNumber" name="supplierVATNumber" placeholder="VAT #"  >
                                         </div>
                                         <div class="col-md-4 mb-3 ml-auto">
-                                            <select class="custom-select" name="closed" id="closed" required>
+                                            <select class="custom-select" name="closed" id="closed" >
                                                 <option selected disabled value="">Is Closed...</option>
                                                 <option value="true">Closed</option>
                                                 <option value="false">Active</option>
@@ -153,7 +153,7 @@
                                     <h6 style="font-weight: bold">Contact Information</h6>
                                     <div class="form-row">
                                         <div class="col-md-6 mb-3">
-                                            <input type="text" class="form-control" id="addressLine1" name="addressLine1" placeholder="Address line 1" required>
+                                            <input type="text" class="form-control" id="addressLine1" name="addressLine1" placeholder="Address line 1" >
                                         </div>
                                         <div class="col-md-6 mb-3">
                                             <input type="text" class="form-control" id="addressLine2" name="addressLine2" placeholder="Address line 2" >
@@ -161,13 +161,13 @@
                                     </div>
                                     <div class="form-row">
                                         <div class="col-md-6 mb-3">
-                                            <input type="text" class="form-control" id="city" name="city" placeholder="City" required>
+                                            <input type="text" class="form-control" id="city" name="city" placeholder="City" >
                                         </div>
                                         <div class="col-md-3 mb-3">
-                                            <input type="text" class="form-control" id="zipCode" name="zipCode" placeholder="Zip" required>
+                                            <input type="text" class="form-control" id="zipCode" name="zipCode" placeholder="Zip" >
                                         </div>
                                         <div class="col-md-3 mb-3">
-                                            <select class="custom-select" id="country" name="country" required disabled>
+                                            <select class="custom-select" id="country" name="country" disabled>
                                                 <option selected disabled value="">Choose Country...</option>
 
                                             </select>
@@ -175,30 +175,30 @@
                                     </div>
                                     <div class="form-row">
                                         <div class="col-md-4 mb-3">
-                                            <input type="text" class="form-control" id="contactPhone" name="contactPhone" placeholder="Contact phone" required>
+                                            <input type="tel" class="form-control" id="contactPhone" name="contactPhone" placeholder="Contact phone" >
                                         </div>
                                         <div class="col-md-4 mb-3">
-                                            <input type="email" class="form-control" id="contactEmail" name="contactEmail" placeholder="Contact Email" required>
+                                            <input type="email" class="form-control" id="contactEmail" name="contactEmail" placeholder="Contact Email" >
                                         </div>
                                     </div>
                                     <h6 style="font-weight: bold">Financial Information</h6>
                                     <div class="form-row">
                                         <div class="col-md-6 mb-3">
-                                            <input type="text" class="form-control" id="bankName" name="bankName" placeholder="Bank name" required>
+                                            <input type="text" class="form-control" id="bankName" name="bankName" placeholder="Bank name" >
                                         </div>
                                         <div class="col-md-6 mb-3">
-                                            <input type="text" class="form-control" id="bankAccount" name="bankAccount" placeholder="Account #" required>
+                                            <input type="text" class="form-control" id="bankAccount" name="bankAccount" placeholder="Account #" >
                                         </div>
                                     </div>
                                     <div class="form-row">
                                         <div class="col-md-4 mb-3">
-                                            <input type="text" class="form-control" id="bankCode" name="bankCode" placeholder="Bank code" required>
+                                            <input type="text" class="form-control" id="bankCode" name="bankCode" placeholder="Bank code" >
                                         </div>
                                         <div class="col-md-4 mb-3">
                                             <input type="text" class="form-control" id="swift" name="swift" placeholder="SWIFT" >
                                         </div>
                                         <div class="col-md-4 mb-3">
-                                            <select class="custom-select" id="currency" name="currency" required disabled>
+                                            <select class="custom-select" id="currency" name="currency" disabled>
                                                 <option selected disabled value="">Choose Currency...</option>
 
                                             </select>
