--- a/src/main/resources/templates/fragments/vatvalueformfragments.html
+++ b/src/main/resources/templates/fragments/vatvalueformfragments.html
@@ -30,7 +30,7 @@
                                             <h6 style="font-weight: bold">Main Information</h6>
                                             <div class="form-row">
                                                 <div class="col-md-2 mb-3">
-                                                    <input type="number" class="form-control" id="vatValue" name="vatValue" placeholder="VAT Value" required>
+                                                    <input type="number" min="0" max="2" step="0.01" class="form-control" id="vatValue" name="vatValue" placeholder="VAT Value" required>
                                                 </div>
                                                 <div class="col-md-10 mb-3">
                                                     <input type="text" class="form-control" id="description" name="description" placeholder="Description" required>
@@ -71,7 +71,7 @@
                                     <h6 style="font-weight: bold">Main Information</h6>
                                     <div class="form-row">
                                         <div class="col-md-2 mb-3">
-                                            <input type="number" class="form-control" id="vatValue" name="vatValue" placeholder="VAT Value" required>
+                                            <input type="number" min="0" max="2" step="0.01" class="form-control" id="vatValue" name="vatValue" placeholder="VAT Value" required>
                                         </div>
                                         <div class="col-md-10 mb-3">
                                             <input type="text" class="form-control" id="description" name="description" placeholder="Description" required>
